--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.9",
